@@ -1,3 +1,7 @@
+2001-12-16  Paolo Carlini  <pcarlini@unitus.it>
+
+	* testsuite/21_strings/assign.cc (test01): Add tests.
+
 2001-12-15  Paolo Carlini  <pcarlini@unitus.it>
             Nathan Myers  <ncm@cantrip.org>
 
